# DynamicStringLibrary

./: CMakeLists.txt  README.md  example.c
my_str/: lib_string.c  lib_string.h
